Improve/move manage cost pg (#3491)
Closes #3091 

Also cleans up straggler mentions of Standard and replaces with
Pay-As-You-Go

---------

Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -1,92 +1,54 @@
 ---
-title: Manage cost on the Standard Plan
-description: How to manage costs of running jobs on QPUs when using the Standard Plan on IBM Quantum Platform.
+title: Manage cost on the Pay-As-You-Go Plan
+description: How to manage costs of running jobs on QPUs when using the Pay-As-You-Go Plan on IBM Quantum Platform.
 
 ---
 
-# Manage cost on the Standard Plan
+# Manage cost
 
-<CloudContent>
-<Admonition type="note" title="Note">
-* The information in this topic only applies to those who are using the Standard Plan for Qiskit Runtime.  There are no costs associated with the IBM Quantum Platform Open Plan.
-</Admonition>
+This guide describes how to set a cost limit on your Pay-As-You-Go Plan instance.  You can also manage cost by [minimizing a workload's quantum time](/docs/guides/minimize-time), and setting a [maximum execution time](/docs/guides/max-execution-time) on your workloads.
 
-This guide describes how to set a cost limit or instance limit.  You can also manage cost by [minimizing a workload's quantum time.](minimize-time)
-</CloudContent>
-
-The _cost limit_ or _instance limit_ refers to the total cost of all jobs run with this instance since it was created, and it will always be greater than or equal to the total cost. After the instance reaches the specified number of total seconds, no further jobs can be run and no more cost is incurred.
+The _cost limit_ refers to the total cost of all workloads run with this instance since it was created, and it will always be greater than or equal to the total cost. After the instance reaches the specified number of total seconds, no further workloads can be run and no more cost is incurred.
 
     <Admonition type="note">
       The cost limit is always specified in US dollars (USD), then converted to runtime seconds. However, for monthly billing purposes, you are charged in your local currency, specified on your IBM Cloud&reg; account. Because currency exchange rates can fluctuate, the cost for X runtime seconds might be different when initially calculated in USD than when you’re actually charged in your local currency. As a result, if your local currency is not USD, the total amount charged for the number of seconds specified in this field could vary from the dollar amount you specify.
     </Admonition>
 
 <span id="cost-limit"></span>
-## Set or change a cost limit or instance limit
+## Set or change a cost limit
 
-An instance administrator can limit how much is spent. There are several ways to set or change this limit:
+There are several ways to set or change a limit on how much is spent:
 
-* **IBM Quantum Platform**: Open the [Instances & allocation tab.](https://quantum.cloud.ibm.com/instances) Find the instance you want to limit, click the overflow menu at the end of the row, and then click **Edit details**. Set the total cost limit or the usage limit, then click **Save changes**.
+* **IBM Quantum Platform**: Open the [Instances](https://quantum.cloud.ibm.com/instances) table. Find the instance you want to limit, click the overflow menu at the end of the row, and then click **Edit details**. Set the total cost limit or the usage limit, then click **Save changes**.
    <Admonition type="note">
-   You can also set the cost or usage limit when creating a new Standard Plan instance.
+   You can also set the cost or usage limit when creating a new instance under the Pay-As-You-Go Plan. When you select the Pay-As-You-Go tile, a field appears with the label "Total cost limit (Optional)". You can enter a total cost limit in this field.
    </Admonition>
 
-* **API**: Set the instance limit in seconds.
-   * New IBM Quantum Platform users: [`PUT /v1/instances/configuration "instance_limit":<seconds>`](/docs/api/qiskit-runtime-rest/tags/instances#tags__instances__operations__replace_instance_data).
-   * Classic Qiskit Runtime on IBM Cloud users: [`PUT /instances/configuration  "instance_limit":<seconds>`](https://cloud.ibm.com/apidocs/quantum-computing#replace-instance-data)
+* **API**: [Set the instance limit in seconds.](/docs/api/qiskit-runtime-rest/tags/instances#tags__instances__operations__replace_instance_data)
+
+   ```api
+   PUT /v1/instances/configuration "instance_limit":<seconds>
+   ```
 
 * **IBM Cloud CLI**: For instructions to use the CLI, refer to [Getting started with the IBM Cloud CLI.](https://cloud.ibm.com/docs/cli?topic=cli-getting-started)
-   1. Log in to the CLI: `ibmcloud login --sso`.
-      1. When you press return, you are asked whether you want to open a browser.  Type `Y`.
-      2. Log into the browser that opens, then click the code that is shown.
-      3. Return to the CLI window and paste the code.
-   1. Establish the API: `ibmcloud api cloud.ibm.com`.
-   1. Update an instance's cost limit:
 
-      ```cli
-         ibmcloud resource service-instance-update <instance_CRN>
-         -p '{"instance_limit_seconds":"<seconds>"}'
-      ```
+   ```cli
+      ibmcloud resource service-instance-update <instance_CRN>
+      -p '{"instance_limit_seconds":"<seconds>"}'
+   ```
 
-      where:
-
-      \<`instance_CRN`\> is the CRN of the instance you want to update. You can get it from the [IBM Quantum Platform dashboard.](https://quantum.cloud.ibm.com)
-
-      \<`seconds`\> is the maximum number of seconds that can be consumed by the instance. For example, to establish a limit of 1000 seconds ($1600), enter this command:
-
-      ```cli
-         ibmcloud resource service-instance-update <instance_CRN>
-         -p '{"instance_limit_seconds":"1000"}'
-      ```
-
-   1. View the instance details to verify that it was updated:
-
-      ```cli
-         ibmcloud resource service-instance <instance_CRN> -o json
-      ```
-
-      This command returns the information in JSON.  For example:
-
-      ```json
-          [
-            {
-            ...
-            "parameters": {
-            "instance_limit_seconds": "1000"
-            }
-            ...
-            }
-          ]
-      ```
-
-## View the cost limit or instance limit
+## View the cost limit
 
 There are several ways to view the current cost limit:
 
-* **IBM Quantum Platform**: The Max cost limit is shown on the Standard tab of the [Instances & allocation tab.](https://quantum.cloud.ibm.com/instances)
+* **IBM Quantum Platform**: The Max cost limit is shown on the Pay-As-You-Go tab of the [Instances](https://quantum.cloud.ibm.com/instances) table.
 
 * **API**:
-   * New IBM Quantum Platform users: [`GET /v1/instances/configuration`](/docs/api/qiskit-runtime-rest/tags/instances).
-   * Classic Qiskit Runtime on IBM Cloud users: [`GET /instances/configuration`](https://cloud.ibm.com/apidocs/quantum-computing#get-instance)
+
+   ```api
+   GET /v1/instances/configuration
+   ```
+   See the [REST API documentation](/docs/api/qiskit-runtime-rest/tags/instances).
 
 * **IBM Cloud CLI**: For instructions to use the CLI, refer to [Getting started with the IBM Cloud CLI.](https://cloud.ibm.com/docs/cli?topic=cli-getting-started)
 
@@ -95,18 +57,17 @@ There are several ways to view the current cost limit:
    '{"instance_limit_seconds":null}'
    ```
 
-{/** **User interface**: Navigate to the <LegacyContent>[IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances)</LegacyContent><CloudContent>[Instances page](https://quantum.cloud.ibm.com/instances)</CloudContent>, then open the instance and click the edit button by the Cost limit. Delete the value and click **Save**. */}
+## Remove a cost limit
 
+You can remove the cost limit in several ways:
 
-## Remove a cost limit or instance limit
+* **IBM Quantum Platform**: Open the [Instances](https://quantum.cloud.ibm.com/instances) table. Find the instance you want to update, click the overflow menu at the end of the row, and then click **Edit details**. Delete the total cost limit or the usage, then click **Save changes**.
 
-An instance administrator can remove the cost limit in several ways:
+* **API**: [Set the instance limit to `null`.](/docs/api/qiskit-runtime-rest/tags/instances)
 
-* **IBM Quantum Platform**: Open the [Instances & allocation tab.](https://quantum.cloud.ibm.com/instances) Find the instance you want to update, click the overflow menu at the end of the row, and then click **Edit details**. Delete the total cost limit or the usage, then click **Save changes**.
-
-* **API**: Set the instance limit to `null`.
-   * New IBM Quantum Platform users: [`PUT /v1/instances/configuration "instance_limit":null`](/docs/api/qiskit-runtime-rest/tags/instances).
-   * Classic Qiskit Runtime on IBM Cloud users: [`PUT /instances/configuration  "instance_limit":null`](https://cloud.ibm.com/apidocs/quantum-computing#replace-instance-data)
+   ```api
+   PUT /v1/instances/configuration "instance_limit":null
+   ```
 
 * **IBM Cloud CLI**: For instructions to use the CLI, refer to [Getting started with the IBM Cloud CLI.](https://cloud.ibm.com/docs/cli?topic=cli-getting-started)
 
@@ -114,8 +75,6 @@ An instance administrator can remove the cost limit in several ways:
    ibmcloud resource service-instance-update <instance_CRN> -p
    '{"instance_limit_seconds":null}'
    ```
-
-{/* * **User interface**: Navigate to the <LegacyContent>[IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances)</LegacyContent><CloudContent>[Instances page](https://quantum.cloud.ibm.com/instances)</CloudContent>, then open the instance and click the edit button by the Cost limit. Delete the value and click **Save**. */}
 
 ### What happens when the cost limit is reached
 
@@ -125,21 +84,17 @@ No further jobs can be submitted by using this instance until the cost limit is 
 
 ## How to see what you’re being charged
 
-You are sent a monthly invoice that provides details about your resource charges. You can check how much has been spent at any time on the [IBM Cloud Billing and usage page](https://cloud.ibm.com/billing).
+You will receive a monthly invoice that provides details about your resource charges. You can check how much has been spent at any time on the [IBM Cloud Billing and usage](https://cloud.ibm.com/billing) page.
 
 Additionally, you can determine cost per instance or per job at any time.
 
 ### View usage
 
-<LegacyContent>
-To view the instance's usage, follow the instructions in the [analytics](/docs/admin/analytics) guide.
-</LegacyContent>
-<CloudContent>
 View the instance's usage on the [Analytics](https://quantum.cloud.ibm.com/analytics) page.
-</CloudContent>
-{/* ### View instance cost
 
-To determine how much has been billed to an instance during the current billing cycle, from the <LegacyContent>[IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances)</LegacyContent><CloudContent>[Instances page](https://quantum.cloud.ibm.com/instances)</CloudContent>, click the instance to open its details page.
+### View instance cost
+
+To determine how much has been billed to an instance during the current billing cycle, from the [Instances](https://quantum.cloud.ibm.com/instances) page, click the instance to open its details page.
 
 These are the fields relevant to cost:
 
@@ -152,30 +107,25 @@ You can view your billing cycle on the [Billing and usage page](https://cloud.ib
 
 ### View job cost
 
-To determine how much has been billed to each job associated with an instance, from the <LegacyContent>[IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances)</LegacyContent><CloudContent>[Instances page](https://quantum.cloud.ibm.com/instances)</CloudContent>, click the instance to open its details page. Next, on the left side, click Jobs.
+To determine how much has been billed to each job associated with an instance, from the [Instances](https://quantum.cloud.ibm.com/instances) page, click the instance to open its details page. Next, on the left side, click Jobs.
 
 These are the columns relevant to cost:
 
 - **Usage**: The amount of quantum time used by this job. Quantum time is the duration a QPU is committed to fulfilling a user request.
 - **Cost**: The total cost of running this job.
-*/}
 
 ## Set up spending notifications
 
-On the Standard Plan, you can set up spending notifications to get notified when your account or a particular service reaches a specific spending threshold that you set. For information, see the [IBM Cloud account Type description](https://cloud.ibm.com/docs/account?topic=account-accounts). IBM Cloud spending notifications must be used with other methods of cost management for several reasons:
+You can set up spending notifications to get notified when your account or a particular service reaches a specific spending threshold that you set. For information, see the [IBM Cloud Account types](https://cloud.ibm.com/docs/account?topic=account-accounts) page. IBM Cloud spending notifications must be used with other methods of cost management for several reasons:
 
 *   The notifications trigger only *after* cost surpasses the specified limit.
 *   Cost is submitted to the billing system hourly. Therefore, a long delay might occur between the job submission and the spending notification being sent.
-*   The billing system can take multiple days to get information to the invoicing system, which might cause further delay in notifications. For more information about how the IBM Cloud billing system works, see [Setting spending notifications](https://cloud.ibm.com/docs/billing-usage?topic=billing-usage-spending).
+*   The billing system can take multiple days to get information to the invoicing system, which might cause further delay in notifications. For more information about how the IBM Cloud billing system works, see [Setting spending notifications.](https://cloud.ibm.com/docs/billing-usage?topic=billing-usage-spending)
 
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-<LegacyContent>
-    - Review the [Qiskit Runtime plans](https://cloud.ibm.com/docs/quantum-computing?topic=quantum-computing-plans) available on IBM Cloud.
-    </LegacyContent>
-    <CloudContent>
     - Review the [plans](plans-overview) available to IBM Quantum users.
-    </CloudContent>
     - Review suggestions to [minimize job quantum time.](minimize-time)
+    - Learn how to set a [maximum execution time](/docs/guides/max-execution-time) on jobs.
 </Admonition>
