Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/docs/security/responsibilities.mdx
+++ b/docs/security/responsibilities.mdx
@@ -1,6 +1,6 @@
 ---
 title: Understanding your responsibilities when using Qiskit Runtime
-description: Learn about the management responsibilities and terms and conditions that you have when you use Qiskit Runtime.
+description: Learn about the management responsibilities that you have when you use Qiskit Runtime.
 ---
 
 # Understanding your responsibilities when using Qiskit Runtime
@@ -9,12 +9,12 @@ Review the following sections for the specific responsibilities for you and for 
 
 ## Incident and operations management
 
-Incident and operations management includes tasks such as monitoring, event management, high availability, problem determination, recovery, and full state backup and recovery.
+Incident and operations management includes tasks such as monitoring, event management, high availability, problem determination, recovery, and full-state backup and recovery.
 
 | Task | IBM responsibilities | Your responsibilities |
 | --- | --- | --- |
 |Infrastructure health management|<ul><li>Continuously deliver new features, updates, and bug fixes as needed in a transparent manner.</li><li>Provide notifications for planned maintenance, security bulletins, or unplanned outages.</li></ul> | <ul><li>Set preferences to receive emails about service notifications.</li><li>Monitor the IBM Cloud status page for general announcements.</li></ul> |
-|Infrastructure health monitoring and notification| <ul><li>Remediate all infrastructure environment issues.</li><li> Notify customers of applicable incidents.</li></ul> | <ul><li> Ascertain the impact of each incident that is reported.</li><li>Engage IBM Support as required.</li></ul>|
+|Infrastructure health monitoring and notification| <ul><li>Remediate all infrastructure environment issues.</li><li> Notify customers of applicable incidents.</li></ul> | <ul><li> Ascertain the impact of each reported incident.</li><li>Engage IBM Support as required.</li></ul>|
 |Maintain IBM Cloud high availability SLA| Operate Qiskit Runtime in accordance with the [IBM Cloud Public Service Level Agreements](https://cloud.ibm.com/docs/overview?topic=overview-slas) (SLAs). | Follow high availability best practices. |
 
 ## Change management
@@ -25,11 +25,11 @@ Change management includes tasks such as deployment, configuration, upgrades, pa
 | --- | --- | --- |
 | Major version upgrades | Provide availability and tools for major version updates. | Migrate to a supported version before end-of-support for an old version. |
 | API version changes | Versioning the REST APIs. | Integrate with the wanted version of REST APIs. |
-| Updates, fixes, and new features | <ul><li>Provide regular updates, bug fixes, and new features, following a continuous delivery model in a way that is transparent.</li><li>Post notifications for changes that impact you as the customer.</li></ul> | <ul><li>Set preferences to receive email notifications and monitor the IBM Cloud status page for general announcements.</li><li>Read system-generated notifications and taking appropriate action.</li></ul> |
+| Updates, fixes, and new features | <ul><li>Provide regular updates, bug fixes, and new features, transparently following a continuous delivery model.</li><li>Post notifications for changes that impact customers.</li></ul> | <ul><li>Set preferences to receive email notifications and monitor the IBM Cloud status page for general announcements.</li><li>Read system-generated notifications and take appropriate action.</li></ul> |
 
 ## Identity and access management
 
-Identity and access management includes tasks such as authentication, authorization, access control policies, and approving, granting, and revoking access.
+Identity and access management includes tasks such as authentication, authorization, managing access control policies, and approving, granting, and revoking access.
 
 | Task | IBM responsibilities | Your responsibilities |
 | --- | --- | --- |
@@ -52,7 +52,7 @@ Security and regulation compliance includes tasks such as security controls impl
 
 | Task | IBM responsibilities | Your responsibilities |
 | --- | --- | --- |
-| General | Restore or rebuild the provisioning environments and resources in the affected regions. | <ul><li>Monitor instance and resource states.</li><li>Provision new Qiskit Runtime service instance in alternate region, if available.</li></ul> |
-| Recovery of services | Automatically recover and restore the Qiskit Runtime service capabilities to normal operations. | Repeat any impacted jobs following recovery. |
+| General | Restore or rebuild the provisioning environments and resources in the affected regions. | <ul><li>Monitor instance and resource states.</li><li>Provision new Qiskit Runtime service instances in an alternate region, if available.</li></ul> |
+| Recovery of services | Automatically recover and restore the Qiskit Runtime service capabilities to normal operations. | Resubmit any impacted jobs following recovery. |
 | Backup of user configuration data | IBM is not responsible for backup of user configuration data. | Backup of any configuration data, as needed. |
-| Backup and recovery of workload | IBM is not responsible for backup or recovery of user workload data. | Backup and recovery of your workloads, as needed. |
+| Backup and recovery of workloads | IBM is not responsible for backup or recovery of user workload data. | Backup and recovery of your workloads, as needed. |
