--- a/docs/security/responsibilities.mdx
+++ b/docs/security/responsibilities.mdx
@@ -13,8 +13,8 @@ Incident and operations management includes tasks such as monitoring, event mana
 
 | Task | IBM responsibilities | Your responsibilities |
 | --- | --- | --- |
-|Infrastructure health management|<ul><li>Continuously deliver new features, updates, and bug fixes as needed in a transparent manner.</li><li>Provide notifications for planned maintenance, security bulletins, or unplanned outages.</li></ul> | <ul><li>Set preferences to receive emails about service notifications.</li><li>Monitor the IBM Cloud status page for general announcements.</li></ul> |
-|Infrastructure health monitoring and notification| <ul><li>Remediate all infrastructure environment issues.</li><li> Notify customers of applicable incidents.</li></ul> | <ul><li> Ascertain the impact of each reported incident.</li><li>Engage IBM Support as required.</li></ul>|
+|Infrastructure health management|<ul><li>Continuously deliver new features, updates, and bug fixes as needed in a transparent manner.</li><li>Provide notifications for planned maintenance, security bulletins, or unplanned outages.</li></ul> | <ul><li>[Set preferences to receive emails](https://cloud.ibm.com/user/notifications) about service notifications.</li><li>Monitor the [IBM Cloud status](https://cloud.ibm.com/status) page for general announcements.</li></ul> |
+|Infrastructure health monitoring and notification| <ul><li>Remediate all infrastructure environment issues.</li><li> Notify customers of applicable incidents.</li></ul> | <ul><li> Ascertain the impact of each reported incident.</li><li>Engage [IBM Support](/docs/support) as required.</li></ul>|
 |Maintain IBM Cloud high availability SLA| Operate Qiskit Runtime in accordance with the [IBM Cloud Public Service Level Agreements](https://cloud.ibm.com/docs/overview?topic=overview-slas) (SLAs). | Follow high availability best practices. |
 
 ## Change management
@@ -25,7 +25,7 @@ Change management includes tasks such as deployment, configuration, upgrades, pa
 | --- | --- | --- |
 | Major version upgrades | Provide availability and tools for major version updates. | Migrate to a supported version before end-of-support for an old version. |
 | API version changes | Versioning the REST APIs. | Integrate with the wanted version of REST APIs. |
-| Updates, fixes, and new features | <ul><li>Provide regular updates, bug fixes, and new features, transparently following a continuous delivery model.</li><li>Post notifications for changes that impact customers.</li></ul> | <ul><li>Set preferences to receive email notifications and monitor the IBM Cloud status page for general announcements.</li><li>Read system-generated notifications and take appropriate action.</li></ul> |
+| Updates, fixes, and new features | <ul><li>Provide regular updates, bug fixes, and new features, transparently following a continuous delivery model.</li><li>Post notifications for changes that impact customers.</li></ul> | <ul><li>Set preferences to [receive email notifications](https://cloud.ibm.com/user/notifications) and monitor the [IBM Cloud status](https://cloud.ibm.com/status) page for general announcements.</li><li>Read system-generated notifications and take appropriate action.</li></ul> |
 
 ## Identity and access management
 
@@ -33,8 +33,8 @@ Identity and access management includes tasks such as authentication, authorizat
 
 | Task | IBM responsibilities | Your responsibilities |
 | --- | --- | --- |
-| Identity and access control | Provide the ability to manage and restrict access to resources through IBM Cloud. | Grant, revoke, and manage access to resources through Cloud Identity and Access Management (IAM). |
-| Service authentication | Ensure that only authenticated users have access to your Qiskit Runtime services and resources. | <ul><li>Safeguard your API key from unauthorized access.</li><li>Rotate and update your API keys according to your security policy requirements.</li></ul> |
+| Identity and access control | Provide the ability to manage and restrict access to resources through IBM Cloud. | Grant, revoke, and manage access to resources through [Cloud Identity and Access Management](https://cloud.ibm.com/iam/overview) (IAM). |
+| Service authentication | Ensure that only authenticated users have access to your Qiskit Runtime services and resources. | <ul><li>Safeguard your API key from unauthorized access.</li><li>Rotate and update your [API keys](https://cloud.ibm.com/iam/apikeys) according to your security policy requirements.</li></ul> |
 | Observability | Allow integration of IBM Cloud Activity Tracker Event Routing to audit user actions. | Set up [IBM Cloud Activity Tracker Event Routing](https://cloud.ibm.com/docs/vmware-service?topic=vmware-service-at_events) or other functions to track user activity. |
 
 ## Security and regulation compliance
@@ -46,7 +46,7 @@ Security and regulation compliance includes tasks such as security controls impl
 | General | <ul><li>Maintain controls commensurate to various industry compliance standards.</li><li>Monitor, isolate, and recover service functionality.</li><li>Monitor and report the health of service interfaces.</li></ul> | Ensure that personal and regulated data is not provided. |
 | Vulnerabilities | Monitor to detect vulnerability and security compliance issues. | <ul><li>Keep informed about possible vulnerabilities and security issues through security bulletins that provide potential remediation actions.</li><li>Check the [IBM Cloud status website](https://cloud.ibm.com/status) to find announcements and security bulletins about key events that affect the IBM Cloud platform, infrastructure, and major services.</li></ul> |
 | Encryption | Encrypt data when it is transmitted on any public networks and within the Cloud Service's private data center network. Encryption methods such as HTTPS and TLS are used to protect data in motion. | Ensure, as required, that your connection is encrypted end-to-end. |
-| Security | <ul><li>Ensure the security of data on disk and data in motion within its infrastructure.</li><li>Provide a secure service that complies with key standards.</li></ul> | Restrict user access to the appropriate resources and resource groups. |
+| Security | <ul><li>Ensure the security of data on disk and data in motion within its infrastructure.</li><li>Provide a secure service that complies with key standards.</li></ul> | Restrict [user access](https://cloud.ibm.com/iam/overview) to the appropriate resources and resource groups. |
 
 ## Disaster recovery
 
