--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -140,9 +140,9 @@
     "tem_function_name = \"algorithmiq/tem\"\n",
     "\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_cloud / ibm_quantum / ibm_quantum_platform\",\n",
-    "    instance=\"USER_CRN / HGP\",\n",
-    "    token=\"USER_API_KEY / IQP_API_TOKEN\",\n",
+    "    channel=\"ibm_quantum_platform\",\n",
+    "    instance=\"USER_CRN\",\n",
+    "    token=\"USER_API_KEY\"\n",
     ")\n",
     "\n",
     "# Load your function\n",
