--- a/docs/guides/function-template-chemistry-workflow.ipynb
+++ b/docs/guides/function-template-chemistry-workflow.ipynb
@@ -140,8 +140,13 @@
     "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API key (token), which can be found on the [IBM Quantum Platform](https://quantum.cloud.ibm.com) dashboard. This allows for the instantiation of the serverless client to upload or run the selected function:\n",
     "\n",
     "```python\n",
-    "from qiskit_ibm_catalog import QiskitServerless\n",
-    "serverless = QiskitServerless(token=\"MY_API_TOKEN\", channel=\"ibm_cloud\", instance=\"INSTANCE_CRN\")\n",
+    "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
+    "\n",
+    "catalog = QiskitFunctionsCatalog(\n",
+    "    channel=\"ibm_quantum_platform\",\n",
+    "    instance=\"USER_CRN\",\n",
+    "    token=\"USER_API_KEY\"\n",
+    ")\n",
     "```\n",
     "\n",
     "Optionally, use `save_account()` to save your credentials in a local environment (see the [Set up your IBM Cloud account](/docs/guides/cloud-setup#cloud-save) guide). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account):\n",
