--- a/docs/guides/function-template-chemistry-workflow.ipynb
+++ b/docs/guides/function-template-chemistry-workflow.ipynb
@@ -140,9 +140,9 @@
     "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API key (token), which can be found on the [IBM Quantum Platform](https://quantum.cloud.ibm.com) dashboard. This allows for the instantiation of the serverless client to upload or run the selected function:\n",
     "\n",
     "```python\n",
-    "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
+    "from qiskit_ibm_catalog import QiskitServerless\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(\n",
+    "serverless = QiskitServerless(\n",
     "    channel=\"ibm_quantum_platform\",\n",
     "    instance=\"USER_CRN\",\n",
     "    token=\"USER_API_KEY\"\n",
