--- a/docs/guides/global-data-quantum-optimizer.ipynb
+++ b/docs/guides/global-data-quantum-optimizer.ipynb
@@ -460,11 +460,10 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_cloud / ibm_quantum / ibm_quantum_platform\",\n",
-    "    instance=\"USER_CRN / HGP\",\n",
-    "    token=\"USER_API_KEY / IQP_API_TOKEN\",\n",
+    "    channel=\"ibm_quantum_platform\",\n",
+    "    instance=\"USER_CRN\",\n",
+    "    token=\"USER_API_KEY\"\n",
     ")\n",
     "\n",
     "# Access function\n",
