--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -105,7 +105,11 @@
     "# Load saved credentials\n",
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog()"
+    "catalog = QiskitFunctionsCatalog(\n",
+    "    channel=\"ibm_quantum_platform\",\n",
+    "    instance=\"USER_CRN\",\n",
+    "    token=\"USER_API_KEY\"\n",
+    ")"
    ]
   },
   {
