--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9d7d2edb",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,11 @@
     "# If you have not previously saved your credentials, follow instructions at\n",
     "# https://quantum.cloud.ibm.com/docs/guides/functions\n",
     "# to authenticate with your API key.\n",
-    "catalog = QiskitFunctionsCatalog()\n",
+    "catalog = QiskitFunctionsCatalog(\n",
+    "    channel=\"ibm_quantum_platform\",\n",
+    "    instance=\"USER_CRN\",\n",
+    "    token=\"USER_API_KEY\"\n",
+    ")\n",
     "\n",
     "# load \"Singularity Machine Learning - Classification\" function by Multiverse Computing\n",
     "singularity = catalog.load(\"multiverse/singularity\")\n",
