search tutorials and courses

--- a/docs/guides/function-template-chemistry-workflow.ipynb
+++ b/docs/guides/function-template-chemistry-workflow.ipynb
@@ -152,7 +152,7 @@
     "Optionally, use `save_account()` to save your credentials in a local environment (see the [Set up your IBM Cloud account](/docs/guides/cloud-setup#cloud-save) guide). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account):\n",
     "\n",
     "```python\n",
-    "QiskitServerless.save_account(token=\"MY_API_TOKEN\", channel=\"ibm_cloud\", instance=\"INSTANCE_CRN\")\n",
+    "QiskitServerless.save_account(token=\"USER_API_KEY\", channel=\"ibm_quantum_platform\", instance=\"USER_CRN\")\n",
     "```\n",
     "\n",
     "If the account is saved, there is no need to provide the token to authenticate:"
