--- a/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
@@ -1433,7 +1433,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  service = QiskitRuntimeService(channel=\"ibm_cloud\")\n"
+      "  service = QiskitRuntimeService(channel=\"ibm_quantum_platform\")\n"
      ]
     },
     {
