--- a/docs/tutorials/global-data-quantum-optimizer.ipynb
+++ b/docs/tutorials/global-data-quantum-optimizer.ipynb
@@ -113,10 +113,11 @@
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_cloud / ibm_quantum / ibm_quantum_platform\",\n",
-    "    instance=\"USER_CRN / HGP\",\n",
-    "    token=\"USER_API_KEY / IQP_API_TOKEN\",\n",
+    "    channel=\"ibm_quantum_platform\",\n",
+    "    instance=\"USER_CRN\",\n",
+    "    token=\"USER_API_KEY\"\n",
     ")\n",
+    "\n",
     "# Access function\n",
     "dpo_solver = catalog.load(\"global-data-quantum/quantum-portfolio-optimizer\")"
    ]
