--- a/docs/guides/kipu-optimization.ipynb
+++ b/docs/guides/kipu-optimization.ipynb
@@ -289,9 +289,7 @@
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\",\n",
-    "    instance=\"USER_CRN\",\n",
-    "    token=\"USER_API_KEY\"\n",
+    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
     ")\n",
     "\n",
     "# Access Function\n",
