--- a/docs/tutorials/qunova-hivqe.ipynb
+++ b/docs/tutorials/qunova-hivqe.ipynb
@@ -86,9 +86,7 @@
     "\n",
     "service = QiskitRuntimeService()\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\",\n",
-    "    instance=\"USER_CRN\",\n",
-    "    token=\"USER_API_KEY\"\n",
+    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
     ")\n",
     "\n",
     "hivqe = catalog.load(\"qunova/hivqe-chemistry\")"
