--- a/learning/courses/variational-algorithm-design/optimization-loops.ipynb
+++ b/learning/courses/variational-algorithm-design/optimization-loops.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "## Local and Global Optimizers\n",
     "\n",
-    "We'll first setup our problem before exploring each optimizer class:"
+    "We'll first set up our problem before exploring each optimizer class. We will start with a circuit containing eight variational parameters:"
    ]
   },
   {
