--- a/docs/guides/processor-types.mdx
+++ b/docs/guides/processor-types.mdx
@@ -6,10 +6,7 @@ description: Information on IBM Quantum hardware and features of different proce
 
 # Processor types
 
-Processor types are named for the general technology qualities that go into builds, consisting of the family and revision. Family (for example, Heron) refers to the size and scale of circuits possible on the chip. This is primarily determined by the number of qubits and the connectivity graph. Revisions (for example, r3) are design variants within a given family, often leading to performance improvements or tradeoffs. Segments are comprised of chip sub-sections, and are defined within a given family. For instance, segment H of a Falcon consists of seven qubits arranged as seen in the illustration below. Segment H on a Hummingbird, if implemented, could be entirely different.
-
-![Illustration of segment H on a Falcon processor.](/docs/images/guides/processor-types/seg-h.avif "Illustration of segment H on a Falcon processor")
-
+Processor types are named for the general technology qualities that go into builds, consisting of the family and revision. Family (for example, Heron) refers to the size and scale of circuits possible on the chip. This is primarily determined by the number of qubits and the connectivity graph. Revisions (for example, r3) are design variants within a given family, often leading to performance improvements or tradeoffs.
 
 ## Heron
 
