--- a/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
+++ b/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
@@ -495,7 +495,7 @@
     "\n",
     "__Answer:__\n",
     "\n",
-    "The probability of each qubit being correctly found in the |0> state is 0.90. The probability for all 10 qubits to be found in the correct state is $0.90^10$ or about 35%.\n",
+    "The probability of each qubit being correctly found in the |0> state is 0.90. The probability for all 10 qubits to be found in the correct state is $0.90^{10}$ or about 35%.\n",
     "\n",
     "</details>\n",
     "\n",
