Make authentication code consistent across functions docs (#3600)
Closes #3241

--- a/docs/guides/function-template-chemistry-workflow.ipynb
+++ b/docs/guides/function-template-chemistry-workflow.ipynb
@@ -141,13 +141,18 @@
     "\n",
     "```python\n",
     "from qiskit_ibm_catalog import QiskitServerless\n",
-    "serverless = QiskitServerless(token=\"MY_API_TOKEN\", channel=\"ibm_cloud\", instance=\"INSTANCE_CRN\")\n",
+    "\n",
+    "serverless = QiskitServerless(\n",
+    "    channel=\"ibm_quantum_platform\",\n",
+    "    instance=\"USER_CRN\",\n",
+    "    token=\"USER_API_KEY\"\n",
+    ")\n",
     "```\n",
     "\n",
     "Optionally, use `save_account()` to save your credentials in a local environment (see the [Set up your IBM Cloud account](/docs/guides/cloud-setup#cloud-save) guide). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account):\n",
     "\n",
     "```python\n",
-    "QiskitServerless.save_account(token=\"MY_API_TOKEN\", channel=\"ibm_cloud\", instance=\"INSTANCE_CRN\")\n",
+    "QiskitServerless.save_account(token=\"USER_API_KEY\", channel=\"ibm_quantum_platform\", instance=\"USER_CRN\")\n",
     "```\n",
     "\n",
     "If the account is saved, there is no need to provide the token to authenticate:"
