--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -105,7 +105,9 @@
     "# Load saved credentials\n",
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog()"
+    "catalog = QiskitFunctionsCatalog(\n",
+    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
+    ")"
    ]
   },
   {
