--- a/docs/tutorials/colibritd-pde.ipynb
+++ b/docs/tutorials/colibritd-pde.ipynb
@@ -99,9 +99,7 @@
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_cloud / ibm_quantum / ibm_quantum_platform\",\n",
-    "    instance=\"USER_CRN / HGP\",\n",
-    "    token=\"USER_API_KEY / IQP_API_TOKEN\",\n",
+    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
     ")\n",
     "\n",
     "quick = catalog.load(\"colibritd/quick-pde\")"
