update plans having access to features/services

--- a/docs/guides/transpile-rest-api.mdx
+++ b/docs/guides/transpile-rest-api.mdx
@@ -30,7 +30,7 @@ Query the Qiskit Transpiler Service REST API and provide your QASM string as inp
 There are two ways to invoke the Qiskit Transpiler Service using REST API: with regular transpilation, and with AI-enhanced transpilation. The following demonstrates both ways to invoke the Qiskit Transpiler Service API.
 
 <Admonition type="note">
-    This experimental service is only available to IBM Quantum&reg; Premium Plan users.
+    This experimental service is only available to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem (via IBM Quantum Platform API) Plan users.
 </Admonition>
 
 <Tabs>
