--- a/docs/guides/ai-transpiler-passes.ipynb
+++ b/docs/guides/ai-transpiler-passes.ipynb
@@ -23,7 +23,7 @@
    "id": "7244dd08-62a0-4c10-8c0d-0bd01eebe68f",
    "metadata": {},
    "source": [
-    "The AI-powered transpiler passes are passes that work as a drop-in replacement of \"traditional\" Qiskit passes for some transpiling tasks. They often produce better results than existing heuristic algorithms (such as lower depth and CNOT count), but are also much faster than optimization algorithms such as Boolean satisfiability solvers. The AI transpiler passes can run on your local environment or on the cloud using the Qiskit Transpiler Service if you are part of the IBM Quantum&reg; Premium Plan.\n",
+    "The AI-powered transpiler passes are passes that work as a drop-in replacement of \"traditional\" Qiskit passes for some transpiling tasks. They often produce better results than existing heuristic algorithms (such as lower depth and CNOT count), but are also much faster than optimization algorithms such as Boolean satisfiability solvers. The AI transpiler passes can run on your local environment or on the cloud using the Qiskit Transpiler Service if you are part of the IBM Quantum&reg; Premium Plan, Flex Plan, or On-Prem (via IBM Quantum Platform API) Plan.\n",
     "\n",
     "\n",
     "<Admonition type=\"note\">\n",
@@ -52,7 +52,7 @@
     "pip install qiskit-ibm-transpiler[ai-local-mode]\n",
     "```\n",
     "\n",
-    "Without these extra dependencies, the AI-powered transpiler passes run on the cloud through the Qiskit Transpiler Service (available only for IBM Quantum Premium Plan users). After installing the extra dependencies, the default mode to run the AI-powered transpiler passes is to use your local machine.\n",
+    "Without these extra dependencies, the AI-powered transpiler passes run on the cloud through the Qiskit Transpiler Service (available only for IBM Quantum Premium Plan, Flex Plan, or On-Prem (via IBM Quantum Platform API) Plan users). After installing the extra dependencies, the default mode to run the AI-powered transpiler passes is to use your local machine.\n",
     "\n",
     "## AI routing pass\n",
     "\n",
