--- a/docs/guides/qiskit-code-assistant-vscode.mdx
+++ b/docs/guides/qiskit-code-assistant-vscode.mdx
@@ -8,7 +8,7 @@ description: How to install, use, and configure Qiskit Code Assistant in Visual 
 Learn how to install, use, configure and uninstall the official Qiskit Code Assistant extension in Visual Studio Code (VS Code).
 
 <Admonition type="note" title="Notes">
-    - This is an experimental feature available to IBM Quantum&reg; Premium Plan users with an account on the new [IBM Quantum Platform.](https://quantum.cloud.ibm.com/)
+    - This is an experimental feature available to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem (via IBM Quantum Platform API) Plan users with an account on the new [IBM Quantum Platform.](https://quantum.cloud.ibm.com/)
     - Qiskit Code Assistant is in preview release status and is subject to change.
     - If you have feedback or want to contact the developer team, use the [Qiskit Slack Workspace channel](https://qiskit.enterprise.slack.com/archives/C07LYA6PL83) or the related public GitHub repositories.
 </Admonition>
