--- a/docs/guides/serverless.mdx
+++ b/docs/guides/serverless.mdx
@@ -10,7 +10,7 @@ Qiskit Serverless provides a simple interface to run workloads across quantum-cl
 Premium users can build, deploy, and run their workloads remotely on classical compute made available through IBM Quantum Platform.
 
 <Admonition type="note">
-    This is an experimental feature available only for IBM Quantum Premium Plan users.
+    This is an experimental feature available only for IBM Quantum Premium Plan, Flex Plan, and On-Prem (via IBM Quantum Platform API) Plan users.
 </Admonition>
 
 ## When should I use Qiskit Serverless?
