--- a/docs/tutorials/error-mitigation-with-qiskit-functions.ipynb
+++ b/docs/tutorials/error-mitigation-with-qiskit-functions.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Error mitigation with the IBM Circuit function\n",
     "<Admonition type=\"note\" title=\"Note\">\n",
-    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem (via IBM Quantum Platform API) Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "\n",
     "*Usage estimate: 26 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
