--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Introduction to Qiskit Functions\n",
     "<Admonition type=\"note\" title=\"Notes\">\n",
-    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
+    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem (via IBM Quantum Platform API) Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>"
    ]
   },
