--- a/docs/guides/global-data-quantum-optimizer.ipynb
+++ b/docs/guides/global-data-quantum-optimizer.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "<Admonition type=\"note\">\n",
-    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem (via IBM Quantum Platform API) Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>"
    ]
   },
