update index pg

--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -83,7 +83,7 @@ Qiskit Functions (`qiskit-ibm-catalog.QiskitFunctionsCatalog`) are abstracted se
 - **Circuit functions**: Services that include transpilation, error suppression, error mitigation, and post-processing techniques that take abstract circuits and desired measurement observables as input. With Circuit functions, users can discover new algorithms and applications without needing to manage transpilation or quantum hardware performance.
 - **Application functions**: Services that include entire quantum workflows, from mapping classical to quantum, optimizing for hardware, execution on hardware, and post-processing. Users can prototype industry applications with domain-familiar inputs and outputs.
 
-Premium Plan members can access IBM-provided functions right away, or purchase licenses for the partner-provided functions directly from those partners.
+Premium Plan, Flex Plan, and On-Prem (via IBM Quantum Platform API) Plan members can access IBM-provided functions right away, or purchase licenses for the partner-provided functions directly from those partners.
 
 The catalog can be installed with pip:
 ```bash
@@ -91,7 +91,7 @@ pip install qiskit-ibm-catalog
 ```
 
 ## Qiskit Transpiler as a Service
-The Qiskit Transpiler Service ([package name `qiskit-ibm-transpiler`](https://pypi.org/project/qiskit-ibm-transpiler/)) is a new experimental service that provides remote transpilation capabilities on the cloud to IBM Quantum Premium Plan users. In addition to the local Qiskit SDK transpiler capabilities, your transpilation tasks can benefit from both IBM Quantum cloud resources and AI-powered transpiler passes using this service. To learn more about how to integrate cloud-based transpilation into your Qiskit workflow you can [check out the documentation](./qiskit-transpiler-service).
+The Qiskit Transpiler Service ([package name `qiskit-ibm-transpiler`](https://pypi.org/project/qiskit-ibm-transpiler/)) is a new experimental service that provides remote transpilation capabilities on the cloud to IBM Quantum Premium Plan, Flex Plan, and On-Prem (via IBM Quantum Platform API) Plan users. In addition to the local Qiskit SDK transpiler capabilities, your transpilation tasks can benefit from both IBM Quantum cloud resources and AI-powered transpiler passes using this service. To learn more about how to integrate cloud-based transpilation into your Qiskit workflow you can [check out the documentation](./qiskit-transpiler-service).
 
 The transpiler service can be installed with pip:
 ```bash
